hphp/hack/test/typecheck/class_level_where_clauses/this_eq/partial_classes_bad_01.php.legacy_decl.exp
File "partial_classes_bad_01.php", line 16, characters 13-14:
A 'where' type constraint is violated here (Typing[4323])
File "partial_classes_bad_01.php", line 17, characters 7-14:
This is the class with 'where' type constraints
File "partial_classes_bad_01.php", line 16, characters 13-14:
Expected C2
File "partial_classes_bad_01.php", line 24, characters 42-42:
But got C
File "partial_classes_bad_01.php", line 16, characters 13-14:
A 'where' type constraint is violated here (Typing[4323])
File "partial_classes_bad_01.php", line 17, characters 7-14:
This is the class with 'where' type constraints
File "partial_classes_bad_01.php", line 24, characters 42-42:
Expected C
File "partial_classes_bad_01.php", line 16, characters 13-14:
But got C2
File "partial_classes_bad_01.php", line 28, characters 40-41:
No method 'me' in PartialC (did you mean 'foo'?) (Typing[4053])
File "partial_classes_bad_01.php", line 28, characters 33-37:
This is why I think it is an object of type PartialC
File "partial_classes_bad_01.php", line 24, characters 7-14:
Declaration of PartialC is here
